[project]
name = "LLMcoder"
description = "Feedback-Based Coding Assistant"
authors = [
    {name = "Ana Carsi"},
    {name = "Kushal Gaywala"},
    {name = "Paul Saegert"}
    ]
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.1"
urls = { Github = "https://github.com/pvs-hd-tea/23ws-LLMcoder"}
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
   "requests",
   "types-requests",
   "pre-commit",
   "pytest",
   "pytest-cov",
   "flake8",
]

[project.scripts]
llmcoder = "llmcoder.__main__:main"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "platformdirs==3.10.0",
]
build-backend = "setuptools.build_meta"


[tool.flake8]
ignore = ["E501"]
exclude = [
    ".git",
	"__pycache__",
	"documentation",
	"build",
	"venv",
	".venv",
	"env",
	".env",
	"images",
]


[tool.mypy]
no_implicit_optional = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
exclude = ".venv"
ignore_missing_imports = true

[tool.isort]
multi_line_output = 2
line_length = 500
